--- a/site/pages/v4/design/quotations-en.hbs
+++ b/site/pages/v4/design/quotations-en.hbs
@@ -3,157 +3,227 @@
 	"title": "Quotations",
 	"language": "en",
 	"altLangPrefix": "quotations",
-	"dateModified": "2014-09-23"
+	"css": ["http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome", "css/gridify" ],
+	"dateModified": "2016-10-17"
 }
 ---
-<span class="wb-prettify all-pre"></span>
 
-<div class="row">
+  <span class="wb-prettify all-pre"></span>
+  <div class="row">
     <section class="col-md-8">
-        <div class="panel panel-default">
-            <header class="panel-heading">
-                <h2 class="panel-title">Table of contents</h2>
-            </header>
-            <div class="panel-body">
-                <ul>
+      <div class="panel panel-default">
+        <header class="panel-heading">
+          <h2 class="panel-title">Table of contents</h2>
+        </header>
+        <div class="panel-body">
+          <ul>
+            <li><a href="#purpose">Purpose</a></li>
+            <li><a href="#design">Design and coding</a>
+              <ul>
+                <li><a href="#basic">Basic use</a>
+                  <ul>
                     <li><a href="#blockquote">Blockquotes</a></li>
-					<li><a href="#inline">Inline quotes</a></li>
-                </ul>
-            </div>
+                    <li><a href="#cite">Cite a source</a></li>
+                    <li><a href="#inline">Inline quotes</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </li>
+          </ul>
         </div>
+      </div>
     </section>
-
-    <section class="col-md-4 pull-right">
-        <div class="well">
-            <h2 class="h3 mrgn-tp-0">Related</h2>
-            <section>
-                <h3 class="h4">Accessibility guide</h3>
-                <ul class="list-unstyled mrgn-lft-lg lst-spcd">
-                    <li><a href="../accessibility/quotations-en.html">Quotations and language<span class="wb-inv"> - Accessibility guide</span></a></li>
-                </ul>
-            </section>
-
-            <section>
-                <h3 class="h4">Writing guide</h3>
-                <ul class="list-unstyled mrgn-lft-lg lst-spcd">
-                    <li><a href="../writing/formatting-en.html#quotations">Quotations<span class="wb-inv"> - Writing guide</span></a></li>
-                </ul>
-            </section>
+    <section class="col-md-4">
+      <div class="panel panel-warning">
+        <div class="panel-body">
+          <h2 class="mrgn-tp-0 h4 text-warning"><span class="fa fa-exclamation-triangle"></span> Work in progress</h2>
+          <p>This page is a work in progress.</p>
+          <p>Please <a href="https://github.com/wet-boew/wet-boew-styleguide/issues/new">file an issue</a> or submit a pull request if information or coding is missing, incorrect or out of sync with the main repository (wet-boew/wet-boew).</p>
         </div>
+      </div>
     </section>
-</div>
-
-<section>
-    <h2 class="page-header" id="blockquote">Blockquotes</h2>
-    <p>For quoting blocks of content from another source within your document.</p>
-
-	<section>
-		<h3 class="page-header" id="blockquote-options">Blockquote options</h3>
-		<p>
-			Wrap <code>&lt;blockquote&gt;</code> around any <abbr title="HyperText Markup Language">HTML</abbr> as the quote. We recommend the use of <code>&lt;p&gt;</code> inside of <code>&lt;blockquote&gt;</code>.
-		</p>
-
-		<blockquote>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-		</blockquote>
-
-		<div class="mrgn-tp-lg">
-			<pre><code>&lt;blockquote&gt;
-	&lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.&lt;/p&gt;
-&lt;/blockquote&gt;</code></pre>
-		</div>
-
-		<div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
-			<section class="col-md-6">
-				<h4 class="mrgn-tp-0 text-success">Use when <span class="glyphicon glyphicon-ok-circle"></span></h4>
-				<p>(Info goes here)</p>
-			</section>
-
-			<section class="col-md-6 brdr-lft">
-				<h4 class="mrgn-tp-0 text-danger">Do not use when <span class="glyphicon glyphicon-remove-circle"></span></h4>
-				<p>(Info goes here)</p>
-			</section>
-		</div>
-
-		<section>
-			<h4>Naming a source</h4>
-			<p>Add a <code>&lt;footer&gt;</code> for identifying the source. Wrap the name of the source work in <code>&lt;cite&gt;</code>.</p>
-
+  </div>
+  <h2 id="purpose"><span class="fa-stack"><span class="fa fa-circle fa-stack-2x"></span><span class="fa fa-info fa-stack-1x fa-inverse"></span></span> Purpose</h2>
+  <p>Use  quotations to cite a group of words by someone other than the original author  or speaker.</p>
+  <h2 id="design"><span class="fa-stack"><span class="fa fa-circle fa-stack-2x"></span><span class="fa fa-paint-brush fa-stack-1x fa-inverse"></span></span> Design and coding</h2>
+  <h3 id="basic">Basic use</h3>
+  <p>Use to quote blocks of content from another source within your document.</p>
+  <section>
+    <h4 id="blockquote"><span class="fa-stack"><span class="fa fa-circle fa-stack-2x"></span><span class="fa fa-quote-left fa-stack-1x fa-inverse"></span></span> Blockquotes</h4>
+    <p>Use to indicate a<strong> large quotation </strong>of text that comes from another source.</p>
+    <div class="row">
+      <div class="col-md-3">
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <h5 class="mrgn-tp-0">Appearance</h5>
+            <p>Default blockquote:</p>
 			<blockquote>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-				<footer>Someone famous in <cite>Source Title</cite></footer>
-			</blockquote>
+			
+              <p>Text goes here.</p>
+            </blockquote>
+			<p>Blockquote-reverse:</p>
+            <blockquote class="blockquote-reverse">
+              <p>Text goes here.</p>
+            </blockquote>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-5">
+        <h5 class="mrgn-tp-0 text-success"><span class="glyphicon glyphicon-ok-circle"></span> Correct use</h5>
+<p>Compliance point(s):</p>
+        <ul>
+          <li>Wrap <code>&lt;blockquote&gt;</code> around any quotations that are<strong> more than a few words in length</strong></li>
+          <li>Use <code>&lt;p&gt;</code> inside of <code>&lt;blockquote&gt;</code></li>
+          <li>Use <code>.blockquote-reverse</code> for a floated, right-aligned blockquote</li>
+        </ul>
+        <h5 class="mrgn-tp-0 text-danger"><span class="glyphicon glyphicon-remove-circle"></span> Incorrect use</h5><p>Compliance point(s):</p><ul>
+          <li>Do not use this component in a way that conflicts with the preceding compliance <span class="nowrap">point(s)</span></li>
+          <li><strong>Do not add quotation marks </strong>(<strong>&quot;</strong>) (<code>&amp;quot;</code>) or images of quotation marks to the text, as this is redundant styling</li>
+          <li>Do not use if  you can link directly to the source content</li>
+          <li>Do not use if you can rephrase the content into concise, plain language</li>
+          <li>Do not use to format content that is not a quote</li>
+        </ul>
+      </div>
+      <div class="col-md-4">
+        <h5 class="mrgn-tp-0">Code</h5>
+        <pre><code>// Default blockquote:<strong>
+&lt;blockquote&gt;</strong>
+  <strong>&lt;p&gt;</strong>...&lt;/p&gt;
+&lt;/blockquote&gt;
 
-			<div class="mrgn-tp-lg">
-				<pre><code>&lt;blockquote&gt;
-	&lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.&lt;/p&gt;
-	&lt;footer&gt;Someone famous in &lt;cite&gt;Source Title&lt;/cite&gt;&lt;/footer&gt;
+// Right-aligned blockquote:
+&lt;blockquote <strong>class=&quot;blockquote-reverse&quot;</strong>&gt;
+  &lt;p&gt;...&lt;/p&gt;
+&lt;/blockquote&gt;
+</code>
+</pre>
+      
+      </div>
+    </div>
+    <h4 id="cite"><span class="fa-stack"><span class="fa fa-circle fa-stack-2x"></span><span class="glyphicon glyphicon-user fa-stack-1x fa-inverse"></span></span> Cite a source</h4>
+    <p>Use to identify the the content author, as well as title of the source. </p>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <h5 class="mrgn-tp-0">Appearance</h5>
+			<p>Blockquote with default footer:</p>
+			<blockquote>
+              <p>Text goes here.</p>
+              <footer>Author's name<br>
+                <cite>Title of Cited Source Content</cite></footer>
+            </blockquote>
+			<p>Blockquote with a right-aligned footer:</p>
+            <blockquote>
+              <p>Text goes here.</p>
+              <footer class="text-right">Author's name<br>
+                <cite>Title of Cited Source Content</cite></footer>
+            </blockquote>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <h5 class="mrgn-tp-0 text-success"><span class="glyphicon glyphicon-ok-circle"></span> Correct use</h5>
+<p>Compliance point(s):</p>
+        <ul>
+          <li>Name the quote source when possible with <code>&lt;footer&gt;</code> (author's name) and <code>&lt;cite&gt;</code> (source title) </li>
+          <li>Use a <code>&lt;br&gt;</code> to place the title of the cited source under the author's name</li>
+          <li>Capitalize the cited source title <strong>the same as the author does</strong></li>
+        </ul>
+        <h5 class="mrgn-tp-0 text-danger"><span class="glyphicon glyphicon-remove-circle"></span> Incorrect use</h5><p>Compliance point(s):</p><ul>
+          <li>Do not use this component in a way that conflicts with the preceding compliance <span class="nowrap">point(s)</span></li>
+          <li>Do not omit the quotation source when a quote is cited</li>
+        </ul>
+      </div>
+      <div class="col-md-4">
+        <h5 class="mrgn-tp-0">Code</h5>
+        <pre><code>// Default footer:
+ &lt;blockquote&gt;
+   &lt;p&gt;...&lt;/p&gt;
+   <strong>&lt;footer&gt;</strong>Author's name<strong>&lt;br&gt;</strong>
+    <strong>&lt;cite&gt;</strong>Title of Cited Source Content&lt;/cite&gt;
+  &lt;/footer&gt;
+&lt;/blockquote&gt;
+
+// Right-aligned footer:
+&lt;blockquote&gt;
+  &lt;p&gt;...&lt;/p&gt;
+  <strong>&lt;footer class=&quot;text-right&quot;&gt;</strong>Author's name<strong>&lt;br&gt;</strong>
+    <strong>&lt;cite&gt;</strong>Title of Cited Source Content&lt;/cite&gt;
+ &lt;/footer&gt;
 &lt;/blockquote&gt;</code></pre>
-			</div>
+      </div>
+    </div>
+    <h4 id="inline"><span class="fa-stack"><span class="fa fa-circle fa-stack-2x"></span><span class="fa fa-stack-1x fa-inverse">-&ldquo;-</span></span> Inline quotes</h4>
+    <p>Use inline quotes for  snippets of content that are quoted from another source. They appear <strong>within a sentence</strong>. </p>
+    <div class="row">
+      <div class="col-md-3">
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <h5 class="mrgn-tp-0">Appearance</h5>
+            <p>Complete sentence with colon: "<q>Quoted sentence!</q>"</p>
+            <p>Someone states or intro phrase, &quot;section of quoted text.&quot; </p>
+            <p>Someone states or intro phrase, &quot;Quoted sentence.&quot; </p>
+            <p>Introductory phrase,  &quot;section of quoted text that now needs a comma,&quot; text text text. </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-5">
+        <h5 class="mrgn-tp-0 text-success"><span class="glyphicon glyphicon-ok-circle"></span> Correct use</h5>
+<p>Compliance point(s):</p>
+        <ul>
+          <li>Use  inline quotes if the quote is <strong>less than a few words in length</strong></li>
+          <li>Use double quotation marks (<strong>&quot;</strong>) (<code>&amp;quot;</code>) for inline quotes</li>
+          <li>Wrap the quote in quotation marks <strong>and</strong> <code>&lt;q&gt;</code> element</li>
+          <li>Place periods and commas<strong> inside </strong>the closing <code>&lt;/q&gt;</code>        <ul>
+              <li>This is the style <abbr title="Canada Revenue Agency">CRA</abbr>  uses for quotation marks</li>
+              <li>Unless they are part of the original quotation, place all other marks  <strong>outside</strong> the quotation marks</li>
+            </ul>
+          </li>
+        </ul>
+        <h5 class="mrgn-tp-0 text-danger"><span class="glyphicon glyphicon-remove-circle"></span> Incorrect use</h5><p>Compliance point(s):</p><ul>
+          <li>Do not use this component in a way that conflicts with the preceding compliance <span class="nowrap">point(s)</span></li>
+          <li>Do not use if the content can be rephrased into concise, plain language</li>
+        </ul>
+      </div>
+      <div class="col-md-4">
+        <h5 class="mrgn-tp-0">Code</h5>
+        <pre><code>
+// Complete sentence with colon, then quote:
+<strong>&lt;p&gt;</strong>Complete sentence<strong>:</strong> <strong>&amp;quot;&lt;q&gt;Quoted sentence!&amp;quot;&lt;/q&gt;&lt;/p&gt;</strong>
 
-			<div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
-				<section class="col-md-6">
-					<h5 class="mrgn-tp-0 text-success h4">Use when <span class="glyphicon glyphicon-ok-circle"></span></h5>
-					<p>(Info goes here)</p>
-				</section>
+// Someone states or intro phrase, then quote:
+&lt;p&gt;...<strong>, &amp;quot;&lt;q&gt;...&amp;quot;&lt;/q&gt;</strong>&lt;/p&gt;
 
-				<section class="col-md-6 brdr-lft">
-					<h5 class="mrgn-tp-0 text-danger h4">Do not use when <span class="glyphicon glyphicon-remove-circle"></span></h5>
-					<p>(Info goes here)</p>
-				</section>
-			</div>
-		</section>
-
-		<section>
-			<h4>Alternate displays</h4>
-			<p>Use <code>blockquote-reverse</code> for a floated, right-aligned blockquote.</p>
-
-			<blockquote class="blockquote-reverse">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-				<small>Someone famous in <cite title="Source Title">Source Title</cite></small>
-			</blockquote>
-			<div class="clearfix"></div>
-
-			<div class="mrgn-tp-lg">
-				<pre><code>&lt;blockquote class=&quot;blockquote-reverse&quot;&gt;
-	...
-&lt;/blockquote&gt;</code></pre>
-			</div>
-
-			<div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
-				<section class="col-md-6">
-					<h5 class="mrgn-tp-0 text-success h4">Use when <span class="glyphicon glyphicon-ok-circle"></span></h5>
-					<p>(Info goes here)</p>
-				</section>
-
-				<section class="col-md-6 brdr-lft">
-					<h5 class="mrgn-tp-0 text-danger h4">Do not use when <span class="glyphicon glyphicon-remove-circle"></span></h5>
-					<p>(Info goes here)</p>
-				</section>
-			</div>
-		</section>
-	</section>
-</section>
-
-<section>
-    <h2 class="page-header" id="inline">Inline quotes</h2>
-    <p>For phrasing content quoted from another source. Use <code>&lt;q&gt;</code> if a quotation is short and appears within a paragraph.</p>
-
-	<p>"<q>Our Government is committed to protecting livestock health</q>" said Minister Ritz.</p>
-
-	<div class="mrgn-tp-lg">
-		<pre><code>&lt;p&gt;"&lt;q&gt;Our Government is committed to protecting livestock health&lt;/q&gt;" said Minister Ritz.&lt;/p&gt;</code></pre>
-	</div>
-
-	<div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
-		<section class="col-md-6">
-			<h3 class="mrgn-tp-0 text-success h4">Use when <span class="glyphicon glyphicon-ok-circle"></span></h3>
-			<p>(Info goes here)</p>
-		</section>
-
-		<section class="col-md-6 brdr-lft">
-			<h3 class="mrgn-tp-0 text-danger h4">Do not use when <span class="glyphicon glyphicon-remove-circle"></span></h3>
-			<p>(Info goes here)</p>
-		</section>
-	</div>
-</section>
+// Someone states or intro phrase, quote that now needs a comma:
+&lt;p&gt;...<strong>, &amp;quot;&lt;q&gt;...,&amp;quot;&lt;/q&gt; </strong>...&lt;/p&gt;</code></pre>
+      </div>
+    </div>
+    <p class="mrgn-tp-lg">Use to identify a title, button, or action that is not a link.</p>
+    <div class="row">
+      <div class="col-md-3">
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <h5 class="mrgn-tp-0">Appearance</h5>
+            <p>Then select the "Sign in" button. </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-5">
+        <h5 class="mrgn-tp-0 text-success"><span class="glyphicon glyphicon-ok-circle"></span> Correct use</h5>
+<p>Compliance point(s):</p>
+        <ul>
+          <li>Use quotation marks to identify a <strong>title</strong>,<strong> button</strong>, or<strong> action</strong> that is <strong>not around or in a link</strong></li>
+        </ul>
+        <h5 class="mrgn-tp-0 text-danger"><span class="glyphicon glyphicon-remove-circle"></span> Incorrect use</h5><p>Compliance point(s):</p><ul>
+          <li>Do not use this component in a way that conflicts with the preceding compliance <span class="nowrap">point(s)</span></li>
+          <li>Do not use quotations around a link</li>
+          <li>Do not use if the content can be rephrased into concise, plain language</li>
+        </ul>
+      </div>
+      <div class="col-md-4">
+        <h5 class="mrgn-tp-0">Code</h5>
+        <pre><code>&lt;p&gt;... <strong>&amp;quot;...&amp;quot;</strong> ...&lt;/p&gt;</code></pre>
+      </div>
+    </div>
+  </section>
