--- a/site/pages/v4/design/reflow-en.hbs
+++ b/site/pages/v4/design/reflow-en.hbs
@@ -3,279 +3,117 @@
 	"title": "Reflowing content around grids",
 	"language": "en",
 	"altLangPrefix": "reflow",
-	"dateModified": "2014-07-09"
+	"css": ["http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome", "css/gridify" ],
+	"dateModified": "2016-10-17"
 }
 ---
-<span class="wb-prettify all-pre"></span>
 
-<div class="row">
-	<section class="col-md-8">
-		<div class="panel panel-default">
-			<header class="panel-heading">
-				<h2 class="panel-title">Table of contents</h2>
-			</header>
-			<div class="panel-body">
-				<ul>
-					<li><a href="#intro">Introduction</a></li>
-					<li><a href="#examples">Examples</a></li>
-				</ul>
-			</div>
-		</div>
-	</section>
-
-	<section class="col-md-4 pull-right">
-		<div class="well">
-			<h2 class="h3 mrgn-tp-0">Related</h2>
-			<section>
-				<h3 class="h4">Design guide</h3>
-				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
-					<li><a href="grids-en.html">Grids<span class="wb-inv"> - Design guide </span></a></li>
-					<li><a href="floats-en.html">Floats<span class="wb-inv"> - Design guide </span></a></li>
-					<li><a href="proximity-en.html">Margin proximity<span class="wb-inv"> - Design guide </span></a></li>
-				</ul>
-			</section>
-		</div>
-	</section>
-</div>
-
-<section>
-	<h2 class="page-header mrgn-tp-sm" id="intro">Introduction</h2>
-	<p>Grids create boxes of content, which is typically the desired result.  However, there are times when content needs to reflow around the grids.  The <code>mrgn-*-md</code> creates margin of 15px and it mimics the same gutter on a grid. This is important to understand when mixing grids and non-grids in the same row.  In order for the content will reflow around the grid cell, yet have the gutters match, you must apply both the <code>mrgn-lft-md</code> and <code>mrgn-rght-md</code> to the non-grid content.</p>
-</section>
-
-<section>
-	<h2 class="page-header" id="examples">Examples</h2>
-	<div class="row">
-		<section class="col-md-6 brdr-rght">
-			<h3>Without reflow: Example 1</h3>
-			<div class="row">
-				<div class="col-md-8">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-				</div>
-				<div class="col-md-4">
-					<div class="well">
-						<p>Lorem ipsum dolor sit amet.</p>
-					</div>
-				</div>
-			</div>
-
-			<pre><code>&lt;div class=&quot;row&quot;&gt;
-	&lt;div class=&quot;col-md-8&quot;&gt;&lt;p&gt;...&lt;/p&gt;&lt;/div&gt;
-	&lt;div class=&quot;col-md-4&quot;&gt;
-		&lt;div class=&quot;well&quot;&gt;&lt;p&gt;...&lt;/p&gt;&lt;/div&gt;
-	&lt;/div&gt;
-&lt;/div&gt;</code></pre>
-		</section>
-
-		<section class="col-md-6">
-			<h3>With reflow: Example 1</h3>
-			<div class="row">
-				<div class="col-md-4 pull-right">
-					<div class="well mrgn-bttm-md">
-						<p>Lorem ipsum dolor sit amet.</p>
-					</div>
-				</div>
-				<div class="mrgn-lft-md mrgn-rght-md">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-				</div>
-			</div>
-
-			<pre><code>&lt;div class=&quot;row&quot;&gt;
-	&lt;div class=&quot;col-md-4 pull-right&quot;&gt;
-		&lt;div class=&quot;well mrgn-bttm-md&quot;&gt;&lt;p&gt;...&lt;/p&gt;&lt;/div&gt;
-	&lt;/div&gt;
-	&lt;div class=&quot;mrgn-lft-md mrgn-rght-md&quot;&gt;
-		&lt;p&gt;...&lt;/p&gt;
-	&lt;/div&gt;
-&lt;/div&gt;</code></pre>
-		</section>
-	</div>
-
-	<div class="row mrgn-tp-lg">
-		<section class="col-md-6 brdr-rght">
-			<h3>Without reflow: Example 2</h3>
-			<div class="row">
-				<div class="col-md-4">
-					<div class="well">
-						<p>Lorem ipsum dolor sit amet.</p>
-					</div>
-				</div>
-				<div class="col-md-8">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-				</div>
-			</div>
-
-			<pre><code>&lt;div class=&quot;row&quot;&gt;
-	&lt;div class=&quot;col-md-4&quot;&gt;
-		&lt;div class=&quot;well&quot;&gt;&lt;p&gt;...&lt;/p&gt;&lt;/div&gt;
-	&lt;/div&gt;
-	&lt;div class=&quot;col-md-8&quot;&gt;&lt;p&gt;...&lt;/p&gt;&lt;/div&gt;
-&lt;/div&gt;</code></pre>
-		</section>
-
-		<section class="col-md-6">
-			<h3>With reflow: Example 2</h3>
-			<div class="row">
-				<div class="col-md-4 pull-left">
-					<div class="well mrgn-bttm-md">
-						<p>Lorem ipsum dolor sit amet.</p>
-					</div>
-				</div>
-				<div class="mrgn-lft-md mrgn-rght-md">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-				</div>
-			</div>
-
-	<pre><code>&lt;div class=&quot;row&quot;&gt;
-	&lt;div class=&quot;col-md-4 pull-left&quot;&gt;
-		&lt;div class=&quot;well mrgn-bttm-md&quot;&gt;&lt;p&gt;...&lt;/p&gt;&lt;/div&gt;
-	&lt;/div&gt;
-	&lt;div class=&quot;mrgn-lft-md mrgn-rght-md&quot;&gt;
-		&lt;p&gt;...&lt;/p&gt;
-	&lt;/div&gt;
-&lt;/div&gt;</code></pre>
-		</section>
-	</div>
-
-	<div class="row mrgn-tp-lg">
-		<section class="col-md-6 brdr-rght">
-			<h3>Without reflow: Example 3</h3>
-			<div class="row">
-				<section class="col-md-8">
-					<div class="panel panel-default">
-						<header class="panel-heading">
-							<h4 class="panel-title">Table of contents</h4>
-						</header>
-						<div class="panel-body">
-							<ul>
-								<li><a href="#">Link</a></li>
-								<li><a href="#">Link</a></li>
-							</ul>
-						</div>
-					</div>
-				</section>
-
-				<section class="col-md-4">
-					<div class="panel panel-info">
-						<header class="panel-heading">
-							<h4 class="panel-title">Related</h4>
-						</header>
-						<div class="panel-body">
-							<ul class="list-group">
-								<li class="list-group-item"><a href="#">Link</a></li>
-								<li class="list-group-item"><a href="#">Link</a></li>
-								<li class="list-group-item"><a href="#">Link</a></li>
-								<li class="list-group-item"><a href="#">Link</a></li>
-								<li class="list-group-item"><a href="#">Link</a></li>
-							</ul>
-						</div>
-					</div>
-				</section>
-			</div>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-	
-			<pre><code>&lt;div class=&quot;row&quot;&gt;
-	&lt;section class=&quot;col-md-8&quot;&gt;
-		&lt;div class=&quot;panel panel-default&quot;&gt;
-			&lt;header class=&quot;panel-heading&quot;&gt;
-				&lt;h4 class=&quot;panel-title&quot;&gt;Table of contents&lt;/h4&gt;
-			&lt;/header&gt;
-			&lt;div class=&quot;panel-body&quot;&gt;
-				...
-			&lt;/div&gt;
-		&lt;/div&gt;
-	&lt;/section&gt;
-
-	&lt;section class=&quot;col-md-4&quot;&gt;
-		&lt;div class=&quot;panel panel-info&quot;&gt;
-			&lt;header class=&quot;panel-heading&quot;&gt;
-				&lt;h4 class=&quot;panel-title&quot;&gt;Related&lt;/h4&gt;
-			&lt;/header&gt;
-			...
-		&lt;/div&gt;
-	&lt;/section&gt;
+  <span class="wb-prettify all-pre"></span>
+  <div class="row">
+    <section class="col-md-8">
+      <div class="panel panel-default">
+        <header class="panel-heading">
+          <h2 class="panel-title">Table of contents</h2>
+        </header>
+        <div class="panel-body">
+          <ul>
+            <li><a href="#purpose">Purpose</a></li>
+            <li><a href="#design">Design and coding</a>
+              <ul>
+                <li><a href="#basic">Basic use</a>                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <section class="col-md-4">
+      <div class="panel panel-warning">
+        <div class="panel-body">
+          <h2 class="mrgn-tp-0 h4 text-warning"><span class="fa fa-exclamation-triangle"></span> Work in progress</h2>
+          <p>This page is a work in progress.</p>
+          <p>Please <a href="https://github.com/wet-boew/wet-boew-styleguide/issues/new">file an issue</a> or submit a pull request if information or coding is missing, incorrect or out of sync with the main repository (wet-boew/wet-boew).</p>
+        </div>
+      </div>
+    </section>
+  </div>
+  <h2 id="purpose"><span class="fa-stack"><span class="fa fa-circle fa-stack-2x"></span><span class="fa fa-info fa-stack-1x fa-inverse"></span></span> Purpose</h2>
+  <p>Use to reflow and wrap non-grid content around and below a <a href="grids-en.html">grid cell</a> ( box of content). </p>
+  <h2 id="design"><span class="fa-stack"><span class="fa fa-circle fa-stack-2x"></span><span class="fa fa-paint-brush fa-stack-1x fa-inverse"></span></span> Design and coding</h2>
+  <h3 id="basic">Basic use</h3>
+  <h4 id="options"><span class="fa-stack"><span class="fa fa-circle fa-stack-2x"></span><span class="fa fa-stack-1x fa-inverse">&#8644;</span></span> Options</h4>
+  <p>Use to reflow content around a grid. Grids create boxes of content, which is typically the desired result.  </p>
+  <div class="row">
+    <div class="col-md-4">
+      <div class="panel panel-default">
+        <div class="panel-body">
+          <h5 class="mrgn-tp-0">Appearance</h5>
+          <p>No reflow (default grid behaviour):</p>
+          <div class="row">
+            <div class="col-md-4 pull-left">
+              <div class="well mrgn-bttm-md">
+                <p>Float (pull) left</p>
+              </div>
+            </div>
+            <div class="mrgn-lft-md mrgn-rght-md">
+              <p>Reflowing content around grids. Reflowing content around grids. Reflowing content around grids. Reflowing content around grids. Reflowing content around grids. Reflowing content around grids. Reflowing content around grids. </p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-4 pull-right">
+              <div class="well mrgn-bttm-md">
+                <p>Float (pull) right</p>
+              </div>
+            </div>
+            <div class="mrgn-lft-md mrgn-rght-md">
+              <p>Reflowing content around grids. Reflowing content around grids. Reflowing content around grids. Reflowing content around grids. Reflowing content around grids. Reflowing content around grids. Reflowing content around grids. </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <h5 class="mrgn-tp-0 text-success"><span class="glyphicon glyphicon-ok-circle"></span> Correct use</h5>
+      <p>Compliance point(s):</p>
+      <ul>
+        <li>Use <code>.mrgn-*-md</code> to create a margin of 15px , and to mimic the same gutter on a grid</li>
+        <li>Ensure you <strong>always apply</strong> both <code>.mrgn-lft-md</code> and <code>.mrgn-rght-md</code> to  non-grid content when grids <strong>and</strong> non-grids are in the same row
+          <ul>
+            <li>This ensures content reflows around the grid cell</li>
+          </ul>
+        </li>
+      </ul>
+      <h5 class="mrgn-tp-0 text-danger"><span class="glyphicon glyphicon-remove-circle"></span> Incorrect use</h5>
+      <p>Compliance point(s):</p>
+      <ul>
+        <li>Do not use this component in a way that conflicts with the preceding compliance <span class="nowrap">point(s)</span></li>
+      </ul>
+    </div>
+    <div class="col-md-4">
+      <h5 class="mrgn-tp-0">Code</h5>
+      <pre><code>// Float (pull) left:
+ &lt;div <strong>class=&quot;row&quot;</strong>&gt;
+  &lt;div class=&quot;col-md-4 pull-left&quot;&gt;
+     &lt;div class=&quot;well mrgn-bttm-md&quot;&gt;
+      &lt;p&gt;..&lt;/p&gt;
+     &lt;/div&gt;
+  &lt;/div&gt;
+  &lt;div <strong>class=&quot;mrgn-lft-md mrgn-rght-md&quot;</strong>&gt;
+   &lt;p&gt;<strong>Reflowing content...</strong>&lt;/p&gt;
+  &lt;/div&gt;
 &lt;/div&gt;
-&lt;p&gt;...&lt;/p&gt;</code></pre>
-		</section>
 
-		<section class="col-md-6">
-			<h3>With reflow: Example 3</h3>
-			<div class="row">
-				<section class="col-md-8 mrgn-bttm-lg">
-					<div class="panel panel-default">
-						<header class="panel-heading">
-							<h4 class="panel-title">Table of contents</h4>
-						</header>
-						<div class="panel-body">
-							<ul>
-								<li><a href="#">Link</a></li>
-								<li><a href="#">Link</a></li>
-							</ul>
-						</div>
-					</div>
-				</section>
-
-				<section class="col-md-4 pull-right mrgn-bttm-lg">
-					<div class="panel panel-info">
-						<header class="panel-heading">
-							<h4 class="panel-title">Related</h4>
-						</header>
-						<div class="panel-body">
-							<ul class="list-group">
-								<li class="list-group-item"><a href="#">Link</a></li>
-								<li class="list-group-item"><a href="#">Link</a></li>
-								<li class="list-group-item"><a href="#">Link</a></li>
-								<li class="list-group-item"><a href="#">Link</a></li>
-								<li class="list-group-item"><a href="#">Link</a></li>
-							</ul>
-						</div>
-					</div>
-				</section>
-
-				<div class="mrgn-lft-md mrgn-rght-md">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-				</div>
-			</div>
-
-			<pre><code>&lt;div class=&quot;row&quot;&gt;
-	&lt;section class=&quot;col-md-8 mrgn-bttm-lg&quot;&gt;
-		&lt;div class=&quot;panel panel-default&quot;&gt;
-			&lt;header class=&quot;panel-heading&quot;&gt;
-				&lt;h4 class=&quot;panel-title&quot;&gt;Table of contents&lt;/h4&gt;
-			&lt;/header&gt;
-			&lt;div class=&quot;panel-body&quot;&gt;
-				...
-			&lt;/div&gt;
-		&lt;/div&gt;
-	&lt;/section&gt;
-
-	&lt;section class=&quot;col-md-4 pull-right mrgn-bttm-lg&quot;&gt;
-		&lt;div class=&quot;panel panel-info&quot;&gt;
-			&lt;header class=&quot;panel-heading&quot;&gt;
-				&lt;h4 class=&quot;panel-title&quot;&gt;Related&lt;/h4&gt;
-			&lt;/header&gt;
-			...
-		&lt;/div&gt;
-	&lt;/section&gt;
-
-	&lt;div class=&quot;mrgn-lft-md mrgn-rght-md&quot;&gt;
-		&lt;p&gt;...&lt;/p&gt;
-	&lt;/div&gt;
+// Float (pull) right:          
+&lt;div <strong>class=&quot;row&quot;</strong>&gt;
+  &lt;div class=&quot;col-md-4 pull-right&quot;&gt;
+     &lt;div class=&quot;well mrgn-bttm-md&quot;&gt;
+      &lt;p&gt;...&lt;/p&gt;
+     &lt;/div&gt;
+  &lt;/div&gt;
+  &lt;div <strong>class=&quot;mrgn-lft-md mrgn-rght-md&quot;</strong>&gt;
+   &lt;p&gt;<strong>Reflowing content...</strong>&lt;/p&gt;
+  &lt;/div&gt;
 &lt;/div&gt;</code></pre>
-		</section>
-	</div>
-
-	<div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
-		<section class="col-md-6">
-			<h3 class="mrgn-tp-0 text-success h4">Use when <span class="glyphicon glyphicon-ok-circle"></span></h3>
-			<p>(Info goes here)</p>
-		</section>
-
-		<section class="col-md-6 brdr-lft">
-			<h3 class="mrgn-tp-0 text-danger h4">Do not use when <span class="glyphicon glyphicon-remove-circle"></span></h3>
-			<p>(Info goes here)</p>
-		</section>
-	</div>
-</section>
-
-<p class="mrgn-tp-lg"><span class="glyphicon glyphicon-info-sign"></span> Some of the code and documentation for this page is sourced from <a href="http://getbootstrap.com/" rel="external">Bootstrap</a></p>
+    </div>
+  </div>
+  <p class="mrgn-tp-lg text-muted">Some of the code and documentation for this page is sourced from <a href="http://getbootstrap.com/" >Bootstrap<span  class="wb-inv"> (external link)</span></a></p>
